Project

General

Profile

Actions

Bug #20940

closed

Colored syntax error from prism

Bug #20940: Colored syntax error from prism
1

Added by ko1 (Koichi Sasada) almost 2 years ago. Updated almost 2 years ago.

Status:
Closed
Target version:
[ruby-core:120149]

Description

Prism shows syntax error with coloring.
But we have long avoided coloring Ruby for reasons such as color weakness.
Can we release next Ruby 3.4.0 with colored syntax errors?

colored_syntax_error1
colored_syntax_error2

NOTE:


Files

clipboard-202412101454-v5ydy.png (20.6 KB) clipboard-202412101454-v5ydy.png ko1 (Koichi Sasada), 12/10/2024 05:54 AM
clipboard-202412101456-u1hrp.png (10.7 KB) clipboard-202412101456-u1hrp.png ko1 (Koichi Sasada), 12/10/2024 05:56 AM
Actions

Also available in: PDF Atom