[PRISM] Support NO_COLOR environment variable

Fixes [Bug #20940]